# coronas-triangle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  meson.build  triangle.files
.qtc_clangd/: compile_commands.json
shader/: main_frag.spv  main_vert.spv  shader.frag  shader.vert  vert.spv
src/: _main.cpp  common.hpp  init_window.cpp  init_window.hpp  load_file.cpp  load_file.hpp  main.cpp  meson.build  oldmain.cpp  renderer.cpp  renderer.h  renderer.hpp  uniform_buffer_object.hpp  vk_buffers.cpp  vk_buffers.hpp  vk_command.cpp  vk_command.hpp  vk_debugmsg.cpp  vk_debugmsg.hpp  vk_descriptor.cpp  vk_descriptor.hpp  vk_device.cpp  vk_device.hpp  vk_image.cpp  vk_image.hpp  vk_instance.cpp  vk_instance.hpp  vk_macros.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_presentation.cpp  vk_presentation.hpp  vk_shader.cpp  vk_shader.hpp  vk_syncobjects.cpp  vk_syncobjects.hpp  vk_utilities.cpp  vk_utilities.hpp
src/scene/: scene_obj.hpp
