source_files = [
    'main.cpp',
    'init_window.cpp',
    'load_file.cpp',
    'log.cpp',
    'vk_buffers.cpp',
    'vk_command.cpp',
    'vk_debugmsg.cpp',
    'vk_device.cpp',
    'vk_instance.cpp',
    'vk_pipeline.cpp',
    'vk_presentation.cpp',
    'vk_syncobjects.cpp',
    'vk_descriptor.cpp'
]



sources = files(source_files)