source_files = [
    'main.cpp',
    'renderer.cpp',
    'vk_buffers.cpp',
    'vk_image.cpp',
    'vk_command.cpp',
    'vk_device.cpp',
    'vk_instance.cpp',
    'vk_pipeline.cpp',
    'vk_presentation.cpp',
    'vk_syncobjects.cpp',
    'vk_descriptor.cpp',
    'vk_shader.cpp'
]



sources = files(source_files)
